--- a/jv_nutricionista/package.json
+++ b/jv_nutricionista/package.json
@@ -1,5 +1,4 @@
 {
-  "homepage": "https://hiagospencer.github.io/jao_victor_nutricionista",
   "name": "jv_nutricionista",
   "private": true,
   "version": "0.0.0",
@@ -8,9 +7,7 @@
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
-    "preview": "vite preview",
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d dist"
+    "preview": "vite preview"
   },
   "dependencies": {
     "gsap": "^3.12.5",
