--- a/jv_nutricionista/package.json
+++ b/jv_nutricionista/package.json
@@ -12,7 +12,8 @@
   "dependencies": {
     "gsap": "^3.12.5",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "react-scroll": "^1.9.0"
   },
   "devDependencies": {
     "@types/react": "^18.3.3",
