--- a/jv_nutricionista/package.json
+++ b/jv_nutricionista/package.json
@@ -13,6 +13,7 @@
     "gsap": "^3.12.5",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-icons": "^5.2.1",
     "react-scroll": "^1.9.0"
   },
   "devDependencies": {
