--- a/jv_nutricionista/package.json
+++ b/jv_nutricionista/package.json
@@ -14,7 +14,8 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.2.1",
-    "react-scroll": "^1.9.0"
+    "react-scroll": "^1.9.0",
+    "styled-components": "^6.1.11"
   },
   "devDependencies": {
     "@types/react": "^18.3.3",
